--- a/tabelas/tabelas.css
+++ b/tabelas/tabelas.css
@@ -15,4 +15,8 @@ table tr:last-child td:first-child {
 table tr:last-child td:last-child {
     border-top-right-radius: 10px;
 }
+tr, td {
+    padding: 30px;
+    text-align: center;
+}
 
