--- a/tabelas/tabelas.css
+++ b/tabelas/tabelas.css
@@ -8,15 +8,21 @@ tbody{
 
 }
 table tr:last-child td:first-child {
-    border-top-left-radius: 10px;
+    /*border-top-left-radius: 10px;*/
 
 }
 
 table tr:last-child td:last-child {
-    border-top-right-radius: 10px;
+    /*border-top-right-radius: 10px;*/
 }
 tr, td {
     padding: 30px;
     text-align: center;
 }
 
+.menuItemAdd{
+    background: #e7ebf3;
+    margin-top: -30px;
+    padding: 5px;
+    text-align: right;
+}
